# airesumebooster

./: .env.example  .gitignore  README.md  package-lock.json  package.json  requirements.txt  vite.config.ts
client/src/: App.tsx  env.d.ts
client/src/components/: email-auth-form.tsx  pdf-viewer.tsx  resume-upload.tsx  suggestion-card.tsx
client/src/hooks/: useAuth.ts
client/src/lib/: firebase.ts  openai.ts  queryClient.ts
client/src/pages/: dashboard.tsx  login.tsx  reset-password.tsx  resume-view.tsx  verify-email.tsx
server/: .env.example  auth.ts  config.ts  index.ts  pyproject.toml  routes.ts  storage.ts
server/app/: auth.py  config.py  env.py  firebase.py  main.py  openai_client.py  storage.py
server/app/models/: __init__.py  resume.py  user.py
server/app/routes/: __init__.py  auth.py  resumes.py
shared/: schema.ts
